Refactor shecklesUpdater.client.lua to use a mock value for displaying sheckles, enhancing UI responsiveness; remove updateSheckles remote event from MoneyService.lua to streamline data handling.

--- a/default.project.json
+++ b/default.project.json
@@ -5,11 +5,7 @@
 
     "ReplicatedStorage": {
       "Remotes": {
-        "$className": "Folder",
-
-        "updateSheckles": {
-          "$className": "RemoteEvent"
-        }
+        "$className": "Folder"
       }
     },
     "StarterGui": {
