Add PlotService to default.project.json and update DataService to initialize both MoneyService and PlotService on data load, improving data management.

--- a/default.project.json
+++ b/default.project.json
@@ -34,6 +34,9 @@
 
         "MoneyService": {
           "$path": "src/server/services/MoneyService.lua"
+        },
+        "PlotService": {
+          "$path": "src/server/services/PlotService.lua"
         }
       }
     }
