Add buttonTPs to default.project.json, enhancing client functionality with teleportation features.

--- a/default.project.json
+++ b/default.project.json
@@ -11,6 +11,9 @@
     "StarterGui": {
       "shecklesUpdater": {
         "$path": "src/client/shecklesUpdater.client.lua"
+      },
+      "buttonTPs": {
+        "$path": "src/client/buttonTPs.client.lua"
       }
     },
     "ServerScriptService": {
