Add ImageLabel elements to GUI structure in default.project.json for enhanced visual representation of images in Frames.

--- a/default.project.json
+++ b/default.project.json
@@ -43,6 +43,9 @@
             "$className": "Frame",
             "Button": {
               "$className": "TextButton"
+            },
+            "Image": {
+              "$className": "ImageLabel"
             }
           },
 
@@ -50,6 +53,9 @@
             "$className": "Frame",
             "Button": {
               "$className": "TextButton"
+            },
+            "Image": {
+              "$className": "ImageLabel"
             }
           },
 
@@ -57,6 +63,9 @@
             "$className": "Frame",
             "Button": {
               "$className": "TextButton"
+            },
+            "Image": {
+              "$className": "ImageLabel"
             }
           },
 
