Refactor default.project.json to rename SeedImage to FrameImage, removing the SeedButton configuration for a cleaner GUI structure.

--- a/default.project.json
+++ b/default.project.json
@@ -44,12 +44,8 @@
             "SeedFrame": {
               "$className": "Frame",
 
-              "SeedImage": {
+              "FrameImage": {
                 "$className": "ImageLabel"
-              },
-
-              "SeedButton": {
-                "$className": "TextButton"
               }
             }
           },
