Add new GUI elements to default.project.json, including Restock and TitleFrame with associated buttons, and a List for improved user interaction and organization.

--- a/default.project.json
+++ b/default.project.json
@@ -46,6 +46,21 @@
 
               "FrameImage": {
                 "$className": "ImageLabel"
+              },
+              "Restock": {
+                "$className": "Frame",
+                "RestockButton": {
+                  "$className": "TextButton"
+                }
+              },
+              "TitleFrame": {
+                "$className": "Frame",
+                "Title": {
+                  "$className": "TextButton"
+                }
+              },
+              "List": {
+                "$className": "ScrollingFrame"
               }
             }
           },
