Add Exit button and enhance List structure in default.project.json with new GUI elements for improved user interaction, including additional labels and buttons for better organization.

--- a/default.project.json
+++ b/default.project.json
@@ -47,20 +47,56 @@
               "FrameImage": {
                 "$className": "ImageLabel"
               },
+              "Exit": {
+              "$className": "TextButton",
+              "FrameImage": {
+                "$className": "ImageLabel"
+              }
+              },
               "Restock": {
                 "$className": "Frame",
                 "RestockButton": {
                   "$className": "TextButton"
+                },
+                "Image": {
+                  "$className": "ImageLabel"
                 }
               },
               "TitleFrame": {
-                "$className": "Frame",
-                "Title": {
-                  "$className": "TextButton"
-                }
+                "$className": "Frame"
               },
               "List": {
-                "$className": "ScrollingFrame"
+                "$className": "ScrollingFrame",
+                "Template": {
+                  "$className": "Frame",
+                  "Frame": {
+                    "$className": "ImageLabel"
+                  },
+                  "Title": {
+                    "$className": "TextLabel"
+                  },
+                  "stock": {
+                    "$className": "TextLabel"
+                  },
+                  "price": {
+                    "$className": "TextLabel"
+                  },
+                  "Frame2": {
+                    "$className": "ImageLabel"
+                  },
+                  "Buy": {
+                    "$className": "ImageLabel",
+                    "Text": {
+                    "$className": "TextLabel"
+                   }
+                  },
+                  "Tier": {
+                    "$className": "ImageLabel",
+                    "Text": {
+                    "$className": "TextLabel"
+                   }
+                  }
+                }
               }
             }
           },
