Add ResetDisable client configuration to default.project.json for enhanced GUI functionality.

--- a/default.project.json
+++ b/default.project.json
@@ -18,6 +18,9 @@
 
         "PromptClient": {
           "$path": "src/client/PromptClient.client.lua"
+        },
+        "ResetDisable": {
+          "$path": "src/client/ResetDisable.client.lua"
         }
       }
     },
