Add Workspace configuration to default.project.json, introducing a new "noob seed" tool for enhanced project structure and organization.

--- a/default.project.json
+++ b/default.project.json
@@ -3,6 +3,17 @@
   "tree": {
     "$className": "DataModel",
 
+    "Workspace": {
+      "$className": "Workspace",
+
+      "noob seed": {
+        "$className": "Tool",
+        "Handle": {
+          "$className": "Part"
+        }
+      }
+    },
+
     "ReplicatedStorage": {
       "$className": "ReplicatedStorage",
       "Remotes": {
