Enhance seedFrameHandler and default.project.json by adding new GUI elements for displaying seed information, including StockCount and Cost labels. Implement seed list update functionality in seedFrameHandler to dynamically reflect seed data from SeedData module.

--- a/default.project.json
+++ b/default.project.json
@@ -116,15 +116,15 @@
                     "$className": "TextLabel"
                   },
 
-                  "stock": {
+                  "StockCount": {
                     "$className": "TextLabel"
                   },
 
-                  "price": {
+                  "Cost": {
                     "$className": "TextLabel"
                   },
 
-                  "Frame2": {
+                  "SeedIcon": {
                     "$className": "ImageLabel"
                   },
 
@@ -170,7 +170,44 @@
         },
 
         "seedFrameHandler": {
-          "$path": "src/client/seedFrameHandler.client.lua"
+          "$path": "src/client/seedFrameHandler.client.lua",
+          "Template": {
+                  "$className": "Frame",
+
+                  "Frame": {
+                    "$className": "ImageLabel"
+                  },
+
+                  "Title": {
+                    "$className": "TextLabel"
+                  },
+
+                  "StockCount": {
+                    "$className": "TextLabel"
+                  },
+
+                  "Cost": {
+                    "$className": "TextLabel"
+                  },
+
+                  "SeedIcon": {
+                    "$className": "ImageLabel"
+                  },
+
+                  "Buy": {
+                    "$className": "ImageLabel",
+                    "Text": {
+                      "$className": "TextLabel"
+                    }
+                  },
+
+                  "Tier": {
+                    "$className": "ImageLabel",
+                    "Text": {
+                      "$className": "TextLabel"
+                    }
+                  }
+                }
         },
 
         "buttonTPs": {
