--- a/default.project.json
+++ b/default.project.json
@@ -128,10 +128,10 @@
                     "$className": "ImageLabel"
                   },
 
-                  "Buy": {
-                    "$className": "ImageLabel",
+                  "BuyButton": {
+                    "$className": "ImageButton",
                     "Text": {
-                      "$className": "TextLabel"
+                      "$className":"TextLabel"
                     }
                   },
 
