Add BuySeed RemoteEvent to default.project.json and implement Buy button functionality in seedFrameHandler; update Carrot Seed data with icon for improved GUI display.

--- a/default.project.json
+++ b/default.project.json
@@ -11,7 +11,10 @@
       "$className": "ReplicatedStorage",
 
       "Remotes": {
-        "$className": "Folder"
+        "$className": "Folder",
+        "BuySeed": {
+          "$className": "RemoteEvent"
+        }
       },
 
       "Modules": {
@@ -127,12 +130,14 @@
                   "SeedIcon": {
                     "$className": "ImageLabel"
                   },
-
-                  "BuyButton": {
+                  "Buy": {
+                    "$className": "Frame",
+                    "Button": {
                     "$className": "ImageButton",
                     "Text": {
                       "$className":"TextLabel"
                     }
+                  }
                   },
 
                   "Tier": {
