Add ServerInfo folder to ReplicatedStorage in default.project.json and introduce SeedService for seed management; update seedFrameHandler to utilize remotes for BuySeed functionality.

--- a/default.project.json
+++ b/default.project.json
@@ -9,6 +9,12 @@
 
     "ReplicatedStorage": {
       "$className": "ReplicatedStorage",
+      "ServerInfo": {
+        "$className": "Folder",
+        "SEED_RESTOCK_TIMER": {
+          "$className": "IntValue"
+        }
+      },
 
       "Remotes": {
         "$className": "Folder",
@@ -263,7 +269,10 @@
 
         "PlotService": {
           "$path": "src/server/services/PlotService.lua"
-        }
+        },
+        "SeedService": {
+            "$path": "src/server/SeedService.lua"
+          }
       }
     }
   }
