Add SeedTimer to TitleFrame in default.project.json; implement restock timer functionality in SeedService and seedFrameHandler for dynamic seed updates in the GUI.

--- a/default.project.json
+++ b/default.project.json
@@ -108,7 +108,10 @@
               },
 
               "TitleFrame": {
-                "$className": "Frame"
+                "$className": "Frame",
+                "SeedTimer": {
+                  "$className": "TextButton"
+                }
               },
 
               "List": {
