Add carrot Seed folder to SeedData in default.project.json, including properties for Cost, DisplayName, and Icon to enhance seed management structure.

--- a/default.project.json
+++ b/default.project.json
@@ -28,6 +28,18 @@
         "$className": "Folder",
         "SeedData": {
           "$path": "src/server/SeedData.lua",
+          "carrot Seed": {
+           "$className": "Folder",
+           "Cost": {
+            "$className": "IntValue"
+           },
+           "DisplayName": {
+            "$className": "StringValue"
+           },
+           "Icon": {
+            "$className": "StringValue"
+           }
+          },
           "Carrot Seed": {
             "$path": "src/server/Carrot Seed.lua"
           }
