Remove Carrot Seed.lua and restructure default.project.json to introduce a new Server folder with CurrentStock and MaxStock properties for improved seed management.

--- a/default.project.json
+++ b/default.project.json
@@ -40,8 +40,14 @@
             "$className": "StringValue"
            }
           },
-          "Carrot Seed": {
-            "$path": "src/server/Carrot Seed.lua"
+          "Server": {
+            "$className": "Folder",
+            "CurrentStock": {
+            "$className": "IntValue"
+            },
+            "MaxStock": {
+            "$className": "IntValue"
+            }
           }
         }
       }
