Update seedFrameHandler and SeedData to utilize CurrentStock.Value for accurate inventory display; correct Carrot Seed naming in default.project.json for consistency.

--- a/default.project.json
+++ b/default.project.json
@@ -28,7 +28,7 @@
         "$className": "Folder",
         "SeedData": {
           "$path": "src/server/SeedData.lua",
-          "carrot Seed": {
+          "Carrot Seed": {
            "$className": "Folder",
            "Cost": {
             "$className": "IntValue"
