Add InventoryService to project configuration; enhance SeedService with inventory updates and character handling for improved player experience and seed management.

--- a/default.project.json
+++ b/default.project.json
@@ -295,6 +295,9 @@
 
         "SeedService": {
           "$path": "src/server/SeedService.lua"
+        },
+        "InventoryService": {
+          "$path": "src/server/InventoryService.lua"
         }
       }
     }
