Integrate cachedModules into various services for improved data handling; update InventoryService, SeedService, and MoneyService to utilize cachedModules for streamlined access to shared functionality.

--- a/default.project.json
+++ b/default.project.json
@@ -267,7 +267,10 @@
       "$className": "ServerScriptService",
 
       "Server": {
-        "$path": "src/server/Server.server.lua"
+        "$path": "src/server/Server.server.lua",
+        "CachedModules": { 
+          "$path": "src/server/cachedModules.lua"
+        }
       },
 
       "Services": {
